--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "fd219a8f",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,16 @@
     "import wget\n",
     "import csv\n",
     "import random\n",
-    "import os"
+    "import os\n",
+    "from bs4 import BeautifulSoup\n",
+    "from requests import get\n",
+    "import re\n",
+    "import sqlite3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b6cc58e9",
    "metadata": {
     "scrolled": true
@@ -107,24 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "38a3f5df",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['MAIKEL', 'MAKIŁŁO', 52, 'MĘŻCZYZNA'], ['LEANNA', 'DĘBAKOWSKA', 56, 'KOBIETA'], ['JUNNOSUKE', 'CATS', 65, 'MĘŻCZYZNA'], ['HUILI', 'GREIL', 22, 'KOBIETA'], ['QUOC NAM', 'KURJAŃSKI', 54, 'MĘŻCZYZNA'], ['BIRGITTA', 'LOS-PŁAWSZEWSKA', 48, 'KOBIETA'], ['MAKSYMIAN', 'KEREN ZVI', 46, 'MĘŻCZYZNA'], ['RADKHA', 'KABAKLI', 49, 'KOBIETA'], ['CHRISTIANN', 'FLATAU-KOWALSKI', 31, 'MĘŻCZYZNA'], ['ORYSTA', 'SYROWICZKA', 58, 'KOBIETA'], ['HONGXING', 'LIND', 47, 'MĘŻCZYZNA'], ['STAFANIA', 'STEFFKE', 64, 'KOBIETA'], ['PEDRO', 'HOLOVA', 56, 'MĘŻCZYZNA'], ['SULAMITA', 'SARRON', 42, 'KOBIETA'], ['KASIAN', 'GRACA', 59, 'MĘŻCZYZNA'], ['MITSUE', 'JÄCKEL', 21, 'KOBIETA'], ['WENANTY', 'ZAPISHNYI', 69, 'MĘŻCZYZNA'], ['AISTE', 'CHRISSIDOU', 22, 'KOBIETA'], ['KWANG YONG', 'TASIOR', 69, 'MĘŻCZYZNA'], ['MAKSI', 'ŞÜKÜR', 24, 'KOBIETA'], ['JERZY       TADEUSZ', 'SWIĘDZIOŁ', 38, 'MĘŻCZYZNA'], ['HUDA', 'MARTUŚ', 68, 'KOBIETA'], ['KEVIN', 'KHAMUTOU', 37, 'MĘŻCZYZNA'], ['ANGELLA', 'CHUPILKO', 18, 'KOBIETA'], ['ARNAS', 'CHYNADEL', 20, 'MĘŻCZYZNA'], ['THỊ PHƯƠNG THẢO', 'HO-JANECKA', 67, 'KOBIETA'], ['ABDELHAFIZ', 'JENDRAK', 47, 'MĘŻCZYZNA'], ['SOBIESŁAWA', 'ZAZVIRSKA', 22, 'KOBIETA']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "        \n",
     "def rand_consumer_list(num=1, man_possibility=1.0, woman_possibility=1.0, min_age=18, max_age=70):\n",
     "    \n",
+    "    global consumer_column\n",
+    "    consumer_column = ['Imię','Nazwisko','Wiek','Płeć']\n",
+    "    \n",
+    "    global consumer_list\n",
     "    consumer_list = []\n",
     "    x = 0\n",
     "    \n",
@@ -147,21 +146,124 @@
     "                                  random.randint(min_age,max_age),\n",
     "                                  \"KOBIETA\"\n",
     "                                 ])\n",
-    "        x+=1\n",
-    "        \n",
-    "        \n",
-    "    print(consumer_list) \n",
-    "    \n",
-    "rand_consumer_list(14)    "
+    "        x+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "id": "a8aa71ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'food_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-9b3587139cc9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     70\u001b[0m                 \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0mdata_to_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsv_file_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'products'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mproduct_list\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfood_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{csv_file_name}.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mproducts_csv\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'food_list' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def price_format(price):\n",
+    "    return float(price.replace(\" \", \"\").replace(\"zł\", \"\").replace(\",\",\".\"))\n",
+    "\n",
+    "\n",
+    "def pname_format(product):\n",
+    "    return product.replace(\",\",\".\")\n",
+    "\n",
+    "def food_data(last_page_num=1):\n",
+    "    \n",
+    "    url = 'https://www.carrefour.pl/artykuly-spozywcze'\n",
+    "        \n",
+    "    global food_list\n",
+    "    food_list=[]\n",
+    "    \n",
+    "    global column_names\n",
+    "    column_names = ['Produkt','Cena','Cena za jednsotkę','Waga [KG]','Ilość [Sztuki]','Litry']\n",
+    "    \n",
+    "    \n",
+    "    for page_num in range(0,last_page_num):\n",
+    "        \n",
+    "        site = get(f'{url}?page={page_num}')\n",
+    "        bs = BeautifulSoup(site.content, 'html.parser')\n",
+    "        \n",
+    "\n",
+    "        for offer in bs.find_all('div', class_='jss304'):\n",
+    "\n",
+    "            try:\n",
+    "\n",
+    "                product = pname_format(offer.find('span',class_='MuiTypography-root jss199 jss310 MuiTypography-h5').get_text().strip())\n",
+    "\n",
+    "                price = price_format(offer.find('div', class_='MuiTypography-root jss318 MuiTypography-h3').get_text().strip())\n",
+    "\n",
+    "                measure = offer.find('span',class_='MuiTypography-root jss199 jss321 MuiTypography-caption MuiTypography-colorTextSecondary').get_text().strip()\n",
+    "\n",
+    "                if re.search(r'kg\\Z', measure):\n",
+    "                    weight = float(re.split(r' kg\\Z', measure)[0].replace(\",\",\".\"))\n",
+    "                    quantity = 'N/D'\n",
+    "                    liters = 'N/D'\n",
+    "\n",
+    "                elif re.search(r'szt.\\Z', measure):\n",
+    "                    weight = 'N/D'\n",
+    "                    quantity = float(re.split(r' szt.\\Z', measure)[0].replace(\",\",\".\"))\n",
+    "                    liters = 'N/D'\n",
+    "\n",
+    "                elif re.search(r'l\\Z', measure):\n",
+    "                    weight = 'N/D'\n",
+    "                    quantity = 'N/D'\n",
+    "                    liters = float(re.split(r' l\\Z', measure)[0].replace(\",\",\".\"))\n",
+    "\n",
+    "\n",
+    "                price_kg_raw = offer.find('span',class_='MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary').get_text().strip()\n",
+    "\n",
+    "\n",
+    "                if re.search(r'zł/1 kg\\Z', price_kg_raw):\n",
+    "                    if re.search(r'\\A.\\xa0', price_kg_raw):\n",
+    "                        price_kg = float(\"\".join(re.split(r'\\xa0',re.split(r'zł/1 kg\\Z', price_kg_raw)[0].replace(\",\",\".\"))))\n",
+    "                    else:             \n",
+    "                        price_kg = float(re.split(r'zł/1 kg\\Z', price_kg_raw)[0].replace(\",\",\".\"))\n",
+    "\n",
+    "                elif re.search(r'szt.\\Z', price_kg_raw):\n",
+    "                    price_kg = float(re.split(r' zł/1 szt.\\Z', price_kg_raw)[0].replace(\",\",\".\"))\n",
+    "\n",
+    "                elif re.search(r'l\\Z', price_kg_raw):\n",
+    "                    price_kg = float(re.split(r' zł/1 l\\Z', price_kg_raw)[0].replace(\",\",\".\"))\n",
+    "\n",
+    "\n",
+    "                food_list.append([product,price,price_kg,weight,quantity,liters])\n",
+    "\n",
+    "            except AttributeError:\n",
+    "                pass\n",
+    "\n",
+    "def data_to_csv(csv_file_name='products', product_list=food_list):\n",
+    "    \n",
+    "    with open(f'{csv_file_name}.csv', 'w', encoding='utf-8', newline='') as products_csv:\n",
+    "        writer=csv.writer(products_csv)\n",
+    "        writer.writerow(tuple(column_names))\n",
+    "        writer.writerows(product_list)\n",
+    "        \n",
+    "# def data_to_DB(DB_name='products', table_name='Products', product_list):\n",
+    "    \n",
+    "#     con = sqlite3.connect(f'{DB_name}.db')\n",
+    "    \n",
+    "#     cur = con.cursor()\n",
+    "    \n",
+    "#     cur.execute(f'CREATE TABLE {table_name}{tuple(column_names)}')\n",
+    "    \n",
+    "#     for product in product_list:\n",
+    "#         cur.execute(f'INSERT INTO {table_name} VALUES {tuple(product)}')\n",
+    "    \n",
+    "#     con.commit()\n",
+    "#     con.close()\n",
+    "    \n",
+    "    \n",
+    "food_data(1)\n",
+    "data_to_csv(product_list=consumer_list.extend(food_list))"
+   ]
   }
  ],
  "metadata": {
