--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "fd219a8f",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,24 @@
     "from bs4 import BeautifulSoup\n",
     "from requests import get\n",
     "import re\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "from tkinter import *\n",
+    "import webbrowser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "id": "762423fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "build = \"1.01 30.06.2021\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "b6cc58e9",
    "metadata": {
     "scrolled": true
@@ -39,7 +51,7 @@
     "\n",
     "try:\n",
     "\n",
-    "# Downloading woman names from  https://dane.gov.pl/pl/dataset/1501,lista-imion-wystepujacych-w-rejestrze-pesel/resource/28099/table?page=1&per_page=20&q=&sort=    \n",
+    "# Downloading female names from  https://dane.gov.pl/pl/dataset/1501,lista-imion-wystepujacych-w-rejestrze-pesel/resource/28099/table?page=1&per_page=20&q=&sort=    \n",
     "    \n",
     "    woman_names_url = r'https://bit.ly/3iXOZzs'\n",
     "    woman_names_file = wget.download(woman_names_url)\n",
@@ -55,7 +67,7 @@
     "    os.remove('3iXOZzs')\n",
     "\n",
     "            \n",
-    "# Downloading man names from https://dane.gov.pl/pl/dataset/1501,lista-imion-wystepujacych-w-rejestrze-pesel/resource/28100/table?page=1&per_page=20&q=&sort=\n",
+    "# Downloading male names from https://dane.gov.pl/pl/dataset/1501,lista-imion-wystepujacych-w-rejestrze-pesel/resource/28100/table?page=1&per_page=20&q=&sort=\n",
     "\n",
     "\n",
     "    man_names_url = r'https://bit.ly/3qpdUgX'\n",
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "38a3f5df",
    "metadata": {
     "scrolled": true
@@ -151,118 +163,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "a8aa71ea",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'food_list' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-9b3587139cc9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     70\u001b[0m                 \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0mdata_to_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsv_file_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'products'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mproduct_list\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfood_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{csv_file_name}.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mproducts_csv\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'food_list' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "food_column_names = ['Produkt', 'Cena', 'Cena za jednsotkę', 'Jednostka']\n",
+    "food_list = []\n",
+    "\n",
+    "\n",
     "def price_format(price):\n",
-    "    return float(price.replace(\" \", \"\").replace(\"zł\", \"\").replace(\",\",\".\"))\n",
+    "    return float(price.replace(\" \", \"\").replace(\"zł\", \"\").replace(\",\", \".\"))\n",
     "\n",
     "\n",
     "def pname_format(product):\n",
-    "    return product.replace(\",\",\".\")\n",
+    "    return product.replace(\",\", \".\")\n",
+    "\n",
     "\n",
     "def food_data(last_page_num=1):\n",
-    "    \n",
     "    url = 'https://www.carrefour.pl/artykuly-spozywcze'\n",
-    "        \n",
-    "    global food_list\n",
-    "    food_list=[]\n",
-    "    \n",
-    "    global column_names\n",
-    "    column_names = ['Produkt','Cena','Cena za jednsotkę','Waga [KG]','Ilość [Sztuki]','Litry']\n",
-    "    \n",
-    "    \n",
-    "    for page_num in range(0,last_page_num):\n",
-    "        \n",
+    "\n",
+    "    for page_num in range(0, last_page_num):\n",
+    "\n",
     "        site = get(f'{url}?page={page_num}')\n",
     "        bs = BeautifulSoup(site.content, 'html.parser')\n",
-    "        \n",
     "\n",
     "        for offer in bs.find_all('div', class_='jss304'):\n",
     "\n",
     "            try:\n",
     "\n",
-    "                product = pname_format(offer.find('span',class_='MuiTypography-root jss199 jss310 MuiTypography-h5').get_text().strip())\n",
+    "                product = pname_format(\n",
+    "                    offer.find('span', class_='MuiTypography-root jss199 jss310 MuiTypography-h5').get_text().strip())\n",
     "\n",
-    "                price = price_format(offer.find('div', class_='MuiTypography-root jss318 MuiTypography-h3').get_text().strip())\n",
+    "                price = price_format(\n",
+    "                    offer.find('div', class_='MuiTypography-root jss318 MuiTypography-h3').get_text().strip())\n",
     "\n",
-    "                measure = offer.find('span',class_='MuiTypography-root jss199 jss321 MuiTypography-caption MuiTypography-colorTextSecondary').get_text().strip()\n",
+    "                measure_html = offer.find('span',\n",
+    "                                     class_='MuiTypography-root jss199 jss321 MuiTypography-caption MuiTypography-colorTextSecondary').get_text().strip()\n",
     "\n",
-    "                if re.search(r'kg\\Z', measure):\n",
-    "                    weight = float(re.split(r' kg\\Z', measure)[0].replace(\",\",\".\"))\n",
-    "                    quantity = 'N/D'\n",
-    "                    liters = 'N/D'\n",
+    "                if re.search(r'kg\\Z', measure_html):\n",
+    "                    measure = \"Kilogramy\"\n",
     "\n",
-    "                elif re.search(r'szt.\\Z', measure):\n",
-    "                    weight = 'N/D'\n",
-    "                    quantity = float(re.split(r' szt.\\Z', measure)[0].replace(\",\",\".\"))\n",
-    "                    liters = 'N/D'\n",
+    "                elif re.search(r'szt.\\Z', measure_html):\n",
+    "                    measure = \"Sztuki\"\n",
     "\n",
-    "                elif re.search(r'l\\Z', measure):\n",
-    "                    weight = 'N/D'\n",
-    "                    quantity = 'N/D'\n",
-    "                    liters = float(re.split(r' l\\Z', measure)[0].replace(\",\",\".\"))\n",
+    "                elif re.search(r'l\\Z', measure_html):\n",
+    "                    measure = \"Litry\"\n",
     "\n",
-    "\n",
-    "                price_kg_raw = offer.find('span',class_='MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary').get_text().strip()\n",
-    "\n",
+    "                price_kg_raw = offer.find('span',\n",
+    "                                          class_='MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary').get_text().strip()\n",
     "\n",
     "                if re.search(r'zł/1 kg\\Z', price_kg_raw):\n",
     "                    if re.search(r'\\A.\\xa0', price_kg_raw):\n",
-    "                        price_kg = float(\"\".join(re.split(r'\\xa0',re.split(r'zł/1 kg\\Z', price_kg_raw)[0].replace(\",\",\".\"))))\n",
-    "                    else:             \n",
-    "                        price_kg = float(re.split(r'zł/1 kg\\Z', price_kg_raw)[0].replace(\",\",\".\"))\n",
+    "                        price_kg = float(\n",
+    "                            \"\".join(re.split(r'\\xa0', re.split(r'zł/1 kg\\Z', price_kg_raw)[0].replace(\",\", \".\"))))\n",
+    "                    else:\n",
+    "                        price_kg = float(re.split(r'zł/1 kg\\Z', price_kg_raw)[0].replace(\",\", \".\"))\n",
     "\n",
     "                elif re.search(r'szt.\\Z', price_kg_raw):\n",
-    "                    price_kg = float(re.split(r' zł/1 szt.\\Z', price_kg_raw)[0].replace(\",\",\".\"))\n",
+    "                    price_kg = float(re.split(r' zł/1 szt.\\Z', price_kg_raw)[0].replace(\",\", \".\"))\n",
     "\n",
     "                elif re.search(r'l\\Z', price_kg_raw):\n",
-    "                    price_kg = float(re.split(r' zł/1 l\\Z', price_kg_raw)[0].replace(\",\",\".\"))\n",
+    "                    price_kg = float(re.split(r' zł/1 l\\Z', price_kg_raw)[0].replace(\",\", \".\"))\n",
     "\n",
-    "\n",
-    "                food_list.append([product,price,price_kg,weight,quantity,liters])\n",
+    "                food_list.append([product, price, price_kg, measure])\n",
     "\n",
     "            except AttributeError:\n",
     "                pass\n",
     "\n",
-    "def data_to_csv(csv_file_name='products', product_list=food_list):\n",
-    "    \n",
+    "\n",
+    "def data_to_csv(csv_file_name='products', product_list=food_list, column_names=food_column_names):\n",
     "    with open(f'{csv_file_name}.csv', 'w', encoding='utf-8', newline='') as products_csv:\n",
-    "        writer=csv.writer(products_csv)\n",
-    "        writer.writerow(tuple(column_names))\n",
+    "        writer = csv.writer(products_csv)\n",
+    "        writer.writerow(column_names)\n",
     "        writer.writerows(product_list)\n",
-    "        \n",
-    "# def data_to_DB(DB_name='products', table_name='Products', product_list):\n",
-    "    \n",
-    "#     con = sqlite3.connect(f'{DB_name}.db')\n",
-    "    \n",
-    "#     cur = con.cursor()\n",
-    "    \n",
-    "#     cur.execute(f'CREATE TABLE {table_name}{tuple(column_names)}')\n",
-    "    \n",
-    "#     for product in product_list:\n",
-    "#         cur.execute(f'INSERT INTO {table_name} VALUES {tuple(product)}')\n",
-    "    \n",
-    "#     con.commit()\n",
-    "#     con.close()\n",
-    "    \n",
-    "    \n",
-    "food_data(1)\n",
-    "data_to_csv(product_list=consumer_list.extend(food_list))"
+    "\n",
+    "\n",
+    "def data_to_DB(DB_name='products', table_name='Products', product_list=food_list, truncate=True,  column_names=food_column_names):\n",
+    "    con = sqlite3.connect(f'{DB_name}.db', timeout=15)\n",
+    "\n",
+    "    cur = con.cursor()\n",
+    "\n",
+    "    try:\n",
+    "        cur.execute(f'CREATE TABLE {table_name}{tuple(column_names)}')\n",
+    "    except:\n",
+    "        if truncate:\n",
+    "            cur.execute(f'DROP TABLE {table_name};')\n",
+    "            cur.execute(f'CREATE TABLE {table_name}{tuple(column_names)}')\n",
+    "        pass\n",
+    "\n",
+    "    for product in product_list:\n",
+    "        cur.execute(f'INSERT INTO {table_name} VALUES {tuple(product)}')\n",
+    "\n",
+    "    con.commit()\n",
+    "    con.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "abe01bc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def github_click():\n",
+    "    webbrowser.open('https://github.com/4rturF')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f7d0f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = Tk()\n",
+    "app.title('Data Randomizer 1.0')\n",
+    "app.geometry('900x700')\n",
+    "app.resizable(0,0)\n",
+    "try:\n",
+    "    app.iconbitmap('C:/Users/artur/Randomizer/bin/icon.ico')\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "logo_frame = LabelFrame(app, bd=1, bg='#66cc66')\n",
+    "logo_frame.place(x=0,width=300, height=630)\n",
+    "\n",
+    "logo = Label(logo_frame, text='Data\\nRandomizer', font=(\"Agency FB\", 48, 'bold','italic'), bg='#66cc66',fg=\"#404040\", justify=LEFT)\n",
+    "logo.place(x=0, y=10)\n",
+    "\n",
+    "build_info = Label(logo_frame, text=f'Author: Artur Fratczak \\nBuild: {build}',font=(\"Agency FB\", 12, 'bold'), bg='#66cc66',fg=\"#404040\", justify=LEFT )\n",
+    "build_info.place(x=0, y=580)\n",
+    "\n",
+    "\n",
+    "wizard_frame = LabelFrame(app,bd=0, bg='#d9d9d9')\n",
+    "wizard_frame.place(x=300,width=600,height=100)\n",
+    "\n",
+    "buttons_frame = LabelFrame(app,relief=SUNKEN, bd=1, bg='#e6e6e6')\n",
+    "buttons_frame.place(y=630, width=900,height=70 )\n",
+    "\n",
+    "exit_button = Button(buttons_frame, text=\"Zakończ\", width=12, command=app.destroy)\n",
+    "exit_button.pack(side=RIGHT, padx=10)\n",
+    "\n",
+    "next_button = Button(buttons_frame, text=\"Dalej\", width=10, font=\"bold\")\n",
+    "next_button.pack(side=RIGHT, padx=40)\n",
+    "\n",
+    "github_button = Button(buttons_frame, text=\"Github\", width=10, command=github_click)\n",
+    "github_button.pack(side=LEFT, padx=30)\n",
+    "\n",
+    "\n",
+    "app.mainloop()"
    ]
   }
  ],
